<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background_grey">
    
    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/mybutton_background"
            android:text="@string/button_generate" />
	        
	    <Button
	        android:id="@+id/clear_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"	        	        
	        android:text="@string/button_clear"
	        android:background="@drawable/mybutton_background" />
	
	    <Button
	        android:id="@+id/gen_rnd_seed_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"	        	        
	        android:text="@string/button_gen_rnd"
	        android:background="@drawable/mybutton_background" />
    </LinearLayout>
    
   	<TextView
	    android:id="@+id/main_status_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"	    
	    android:layout_centerHorizontal="false"
	    android:layout_below="@+id/button_layout"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="15dp"
	    android:textColor="#FFFFFF"
	    android:text="@string/status_init_text" />
   	
   	<ProgressBar
   	    android:id="@+id/rnd_org_buffer_meter"
   	    style="?android:attr/progressBarStyleHorizontal"
   	    android:layout_width="fill_parent"
   	    android:layout_height="20dp"
   	    android:layout_below="@id/main_status_label"
   	    android:layout_marginTop="5dp"   	    
   	    android:layout_marginLeft="10dp"
   	    android:layout_marginRight="10dp"   	    
   	    android:max="100"
   	    android:progress="100" />
    
    <LinearLayout        
        android:layout_below="@+id/main_status_label"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal" >
	            
	    <se.cuplex.ui.LottoView
	        android:id="@+id/lotto_view"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="5dip" />        
     </LinearLayout>
</RelativeLayout>